# ballast

./: .env.example  .gitignore  README.md  pyproject.toml  universe.txt
backtest/: backtest.py
ballast/: __init__.py  bnb_client.py  breaker.py  cmc_client.py  config.py  execute.py  identity.py  journal.py  loop.py  market_data.py  models.py  perceive.py  regime.py  risk.py  state.py  strategy.py  twak_client.py  universe.py
ballast/signals/: __init__.py  _util.py  fear_greed.py  funding_shadow.py  momentum.py
dashboard/: app.py
dashboard/proposals/: option-a.html  option-b.html  option-c.html
dashboard/templates/: keel.html
deploy/: README.md  ballast.service  ballast.timer  run_tick.sh  setup.sh
scripts/: com.ballast.agent.plist  com.ballast.caffeinate.plist  compete.py  register.py  rehearse.py  run.py  run_tick.sh
skill/: SKILL.md
submission/: DORAHACKS.md
tests/: conftest.py  test_backtest.py  test_bnb_client.py  test_breaker.py  test_execute.py  test_market_data.py  test_regime.py  test_risk.py  test_signals.py
