[project]
name = "ballast"
version = "0.1.0"
description = "Self-custody, spot-only autonomous trading agent for BNB Hack — derivatives data driving spot execution, wrapped in a survival-first risk overlay."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dashboard = [
    "flask>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
ballast = "scripts.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ballast"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
